--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@
     border-radius: 0px !important;
   }
   .goal {
-    background: #ea580c !important;
+    background: #3b82f6 !important;
     border-radius: 0px !important;
   }
 }
